Version 1.1.0-CVS (?? ??? 2005)
 - FIxed bug 1225818: Invalid login adds entry to webcal_user_pref
 - Implemented PATCH [ 587965 ] Entry &quot;use end date&quot; auto-selection
 - Added self-registration based on PATCH [1067168] User self registration
 - Modified trailer.php to prevent invalid dates (<1970 && > 2037) from 
   being created in the pulldowm menus.
 - Added 'Load Timezone Data' button to admin.php
 - Fixed bug 1220248: Get an Error using the 'Availability'
 - Fixed bug  1220256: Get Error using the 'Select' button for assistents
 - Added support for multiple public calendars by enabling nonuser calendars
   to act as public calendar.
 - Added ability to use custom header/stylesheet/trailer on a per-user
   basis via user preferences.
 - Added ability to change text "Public Access" in system settings.
 - Added full timezone support including accurate DST calculations
 - Added Auto-install functionality including upgrading from previous
      versions
 - Fixed bug 1233739: Palm Datebook Import - conflicting events
 - Fixed bug 1231076: Send_reminder.php Errors
 - Fixed bug 1228129: WebCalendar ignores "Language" setting
 - Updated phpDoc documentation
 - Added our first unit test (add_duration_test.php)
 - Moved initialization code into new WebCalendar class. Removed
   includes/connect.php because all its code is in
   includes/classes/WebCalendar.class now. Only files that still have
   initialization code are includes/user*.php
 - Fixed bug 1221727: error in documentation for using iframe with upcoming.php
 - Added new naming conventions to Developer's Guide, fixed spelling mistakes,
   XHTML validation, and formatting consistency
 - Patch 1220042: Make arguments to assert() strings so we get error messages
 - Patch 1208257: use event object for parameters
 - Palm Desktop datebook import works for versions 4.1.1 and newer
 - Fixed bug 1219427: icalclient fails to publish alarms
 - Fixed bug 1218113: iCal ATTENDEE error if event is deleted