@@ -16,7 +16,9 @@ Version 1.1.0-CVS (?? ??? 2005)
       1205151: use of undefined variable in edit_entry.php
   - Other bugs fixed:
       Category was lost wan clicking on prev/next month in month.php
+      Fixed small bug if using 59 minutes for event time
   - New Features / Enhancements / Changes:
+    + Implemented RFE 1095248: Error check weekly repeating events
     + Implemented PATCH [ 587965 ] Entry &quot;use end date&quot; auto-selection
     + Added self-registration based on PATCH [1067168] User self registration,
       blacklist and email notification are optional
